fix: Poster image overflow on Chrome

--- a/elyreacts/src/pages/styles/Poster.module.scss
+++ b/elyreacts/src/pages/styles/Poster.module.scss
@@ -13,18 +13,21 @@
     max-width: $max-width_content;
 
     & > div.imageContainer {
+        display: inline-block;
         position: relative;
 
         width: 100%;
-        max-height: 80vh;
+
+        overflow: hidden;
 
         background: $color_background_alt;
 
         & > img {
-            height: 100%;
+            max-height: 80vh;
             width: 100%;
 
             object-fit: contain;
+            overflow: hidden;
         }
     }
 
